--- a/Detector.tex
+++ b/Detector.tex
@@ -193,7 +193,7 @@ Typically, the generation of an event follows several subsequent steps which are
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.9\textwidth]{figures/MCGeneration.pdf} 
+    \includegraphics[width=0.9\textwidth]{figures/MCGeneration.png} 
   \end{tabular}
   \caption{Sketch of individual steps in the generation process of simulated events. Adapted from~\cite{bib:hepmc}.}
   \label{fig:mc_gen}
