--- a/Objects.tex
+++ b/Objects.tex
@@ -101,7 +101,7 @@ p^\mathrm{cor} = C \cdot p^\mathrm{raw} = C_{\mathrm{offset}}(\pt^\mathrm{raw}, 
   \begin{tabular}{c}
     \includegraphics[width=0.5\textwidth]{figures/CorrectionVsEta_Overview_TDR_ak5pfl1_L2L3.pdf} 
   \end{tabular}
-  \caption{MC-Truth L2L3 corrections for AK5 PF jets as a function of jet pseudorapidity for three reference transverse momentum values: 30\gev (white hollow circles), 100\gev (red squares) and 300\gev (blue circles)~\cite{CMS-DP-2013-033}.}
+  \caption{MC-Truth L2 relative corrections for AK5 PF jets as a function of jet pseudorapidity for three reference transverse momentum values: 30\gev (white hollow circles), 100\gev (red squares) and 300\gev (blue circles)~\cite{CMS-DP-2013-033}.}
   \label{fig:l2l3}
 \end{figure}
 
@@ -111,7 +111,7 @@ p^\mathrm{cor} = C \cdot p^\mathrm{raw} = C_{\mathrm{offset}}(\pt^\mathrm{raw}, 
   \begin{tabular}{c}
     \includegraphics[width=0.4\textwidth]{figures/ResComp_FSRcorr_residuals_Abseta_PF_DiJetData.pdf} 
   \end{tabular}
-  \caption{L2 residual corrections, obtained from dijet events, for AK5 PF jets, as a function of jet pseudorapidity shown with JES uncertainty (yellow band) and the statistical uncertainty (blue band)~\cite{CMS-DP-2013-033}.}
+  \caption{L2 residual corrections for AK5 PF jets as a function of jet pseudorapidity, obtained from dijet events, shown with JES uncertainty (yellow band) and the statistical uncertainty (blue band)~\cite{CMS-DP-2013-033}.}
   \label{fig:l2res}
 \end{figure}
 
@@ -121,14 +121,15 @@ The calibration factors are obtained with respect to the average flavour composi
 
 \section{Identification of b-Quark Jets}
 \label{sec:btagging}
-Jets arising from the hadronization of bottom quarks are usually referred to as \textit{b-jets}. As these are existent in many physics processes as e.g. the decay of top quarks, it is of essential importance to be able to identify b jets and distinguish them from jets initiated by gluons or light-flavour quarks. Typically, the identification of b-jets is denoted \textit{b-tagging} and the distinct properties of b quarks are exploited for the identification of the respective jets. In general, hadronic jets arising from the fragmentation of b quarks possess quite large masses, long lifetimes and daughter particles featuring hard momentum spectra. The CMS experiment with the ability to perform a precise charged-particle tracking and lepton identification exploits the specific b jet properties in dedicated b-tagging algorithms for an efficient b-jet identification~\cite{Chatrchyan:2012jua}:
+Jets arising from the hadronization of bottom quarks are usually referred to as \textit{b jets}. As these are present in many physics processes,\eg the decay of top quarks, it is crucial to identify b jets, \ie distinguish them from jets initiated by gluons or light-flavour quarks. Typically, the identification of b jets is denoted \textit{b tagging} which exploits the distinct properties of b quarks for the identification of the respective jets. In general, b hadrons posses a lifetime of around $c\tau \approx 500$\,\textmu m that makes them travel in the detector before they actually decay. This results typically in a measurable secondary vertex that is displaced with respect to the primary interaction. Furthermore, b-quark jets feature a high number of charged particles per decay resulting in jets with several tracks and often exhibit soft leptons emerging from semi-leptonic decays of b quarks. The CMS experiment with the ability to perform a precise charged-particle tracking and lepton identification exploits the specific b jet properties in dedicated b-tagging algorithms for an efficient b-jet identification~\cite{Chatrchyan:2012jua}. \\
+Each algorithm determines a discriminator value per jet indicating how b-jet-like a jet behaves. Based on that, working points are defined corresponding to a specific minimum threshold of the discriminator value. These working points are named \textit{loose}, \textit{medium} and \textit{tight} and correspond to a misidentification probability, \ie the probability to identify a non-b jet as b jet, of $10\%$, $1\%$ and $0.1\%$ for an average jet transverse momentum of $80$\gev, respectively. B-tagging algorithms comissioned within the CMS experiment are:
 \begin{description}
- \item \textbf{Track Counting (TC) algorithm:} A powerful discriminator for the decay products of a b hadron from prompt tracks is the \textit{impact parameter} (IP) of a track with respect to the primary vertex. Its significance can be computed by taking the ratio of the IP to its respective uncertainty. Tracks in a jet are sorted by decreasing values of the IP significance by the TC algorithm. Depending on whether the IP significance of the second or the third ranked track is chosen as discriminator value the algorithm is denoted \textit{Track Counting High Efficiency} (TCHE) or \textit{Track Counting High Purity} (TCHP) algorithm. 
+ \item \textbf{Track Counting (TC) algorithm:} A powerful discriminator for the decay products of a b hadron from prompt tracks is the \textit{impact parameter} (IP) of a track with respect to the primary vertex. Its significance can be computed by taking the ratio of the IP to its respective uncertainty. Tracks in a jet are sorted by decreasing values of the IP significance by the TC algorithm. Depending on whether the IP significance of the second or the third ranked track is chosen as discriminator the algorithm is denoted \textit{Track Counting High Efficiency} (TCHE) or \textit{Track Counting High Purity} (TCHP) algorithm. 
  \item \textbf{Jet Probability (JP) algorithm:} The JP algorithm extends the simple TC algorithm by connecting the information about the IP from a couple of tracks in the jet. A likelihood is calculated that all tracks of the jet stem actually from the primary vertex. This appraoch can be varied by giving more weight to tracks with the highest IP significance. The maximum of such tracks is four and matches the average number of reconstructed charged particles from the decay of b hadrons. This version is called \textit{Jet B Probability} (JBP) algorithm.
- \item \textbf{Simple Secondary Vertex (SSV) algorithm:} A further useful discriminating feature for b tagging is the presence of a secondary vertex and related kinematic variables like the flight distance and direction which can be determined from the vector between the primary and secondary vertex. The SSV exploits the significance of the flight distance which is given by the flight distance divided by the associated uncertainty. Two different versions of this algorithm exist targeting on the one hand a \textit{High Efficiency} (SSVHE) and on the other hand a \textit{High Purity} (SSVHP). While the SSVHE is based on vertices with at least two associated tracks, the SSVHP uses vertices with more than three tracks. Typically, the efficiency of the algorithm is limited by the reconstruction efficiency of secondary vertices which amounts to about 65\%.  
- \item \textbf{Combined Secondary Vertex (CSV) algorithm:} The CSV algorithm provides an efficient identification of b jets also in cases when no secondary vertex could be recosntructed. It utilizes an approach combining information from secondary vertices as well as track-based lifetime information and thus is able to exceed the efficiency of SSV algorithms. Often, pseudo-vertices can be formed from tracks even when failing the reconstruction of an actual secondary vertex which allows to derive some secondary vertex related quantities. Variables used in the CSV algorithm are e.g. flight distance significance, vertex mass, number of tracks at the vertex, number of tracks in the jet or the IP sigificances for the tracks in the jet. These variables are used to compute two likelihood ratios which can be used to distinguish either c and b jets or light-parton and b jets. 
+ \item \textbf{Simple Secondary Vertex (SSV) algorithm:} A further useful discriminating feature for b tagging is the presence of a secondary vertex and related kinematic variables like the flight distance and direction which can be determined from the vector between the primary and secondary vertex. The SSV exploits the significance of the flight distance which is given by the flight distance divided by the associated uncertainty. Two different versions of this algorithm exist targeting on the one hand a \textit{High Efficiency} (SSVHE) and on the other hand a \textit{High Purity} (SSVHP). While the SSVHE is based on vertices with at least two associated tracks, the SSVHP uses vertices with at least three tracks. Typically, the efficiency of the algorithm is limited by the reconstruction efficiency of secondary vertices which is at the order of 65\%.   
+ \item \textbf{Combined Secondary Vertex (CSV) algorithm:} The CSV algorithm provides utilizes an approach combining information from secondary vertices as well as track-based lifetime information and thus is able to exceed the efficiency of SSV algorithms. It allows even an efficient identification of b jets also in cases when no secondary vertex could be reconstructed. Often, pseudo-vertices can be formed from tracks even when failing the reconstruction of an actual secondary vertex which allows to derive some secondary vertex related quantities. Variables used in the CSV algorithm are, \eg flight distance significance, vertex mass, number of tracks at the vertex, number of tracks in the jet and the IP sigificances for the tracks in the jet. These variables are used to compute two likelihood ratios which can be used to distinguish either c and b jets or light-parton and b jets. 
 \end{description}  
-Each algorithm determines a discriminator value per jet indicating how b-jet-like a jet behaves. Based on that, working points are defined corresponding to a specific minimum threshold of the discriminator value. These working points are named \textit{loose}, \textit{medium} and \textit{tight} and correspond to a misidentification probability, \ie the probability to identify a non-b jet as b jet, of $10\%$, $1\%$ and $0.1\%$ for an average jet momentum of $80$\gev, respectively. \\
+
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -138,12 +139,12 @@ Each algorithm determines a discriminator value per jet indicating how b-jet-lik
   \caption{Performance curves obtained from simulation for the algorithms described in the text. (a) light-parton- and (b) c-jet misidentification probabilities as a function of the b-jet efficiency. Taken from~\cite{Chatrchyan:2012jua}.}
   \label{fig:btagging}
 \end{figure}
-In order to determine the quality of a particular b-tagging algorithm, typically the misidentification probability as function of the b-tag efficiency is compared for various taggers. Such a performance comparison is illustrated in Fig~\ref{fig:btagging} for the tagging algorithms described above. The misidentification probability is derived separately for light-flavour and gluon initiated jets as well as c-jets. The curves are derived from simulated multijet events using jets with $\pt > 60$\,\gev. For loose working points the b-tag efficiency is around $\approx 80-85\%$ and the JBP algorithm shows the best performance. In case of medium and tight selections, the b-tag efficiency drops to $\approx 45-55\%$ and the CSV algorithm performs best. \\
-B-tagging algorithms used for analyses of data obtained at $\sqrt{s} = 8$\tev in 2012 where the TCHP, JP and CSV algorithm~\cite{CMS-PAS-BTV-13-001}. In order to compare the b-tagging performance in data and simulation two different event samples have been selected. On the one hand, an inclusive multijet sample is selected requiring at least one jet with $\pt = 60 - 500$\gev which is dominated by jets from light-flavour quarks and gluons. On the other hand, a sample dominated by top-pair production is selected requiring an electron, a muon and at least two jets with $\pt>30$\gev such that this sample is enriched in b-jets. These samples allow to compare quantities relevant for b-tagging in data and simulation like e.g. the number of secondary vertices or b-tag discriminator values. In general, quantities relevant for b-tagging show a good agreement between data and simulation with deviations within 20\%. Typically, efficiencies and misidentification probabilities are measured as function of jet transverse momentum and pseudorapidity. A potential disagreement between data and simulation can be expressed in terms of \textit{scale factors} and corrected for in analyses such that b-tagging efficiency and misidentification probability in data and simulation match. 
+In order to determine the quality of a particular b-tagging algorithm, typically the misidentification probability as a function of the b-jet efficiency is compared for various taggers. Such a performance comparison is illustrated in Fig~\ref{fig:btagging} for the tagging algorithms described above. The misidentification probability is derived separately for light-flavour and gluon initiated jets as well as c jets. The curves are derived from simulated multijet events using jets with $\pt > 60$\,\gev. For loose working points, the b-jet efficiency is around $\approx 80-85\%$, and the JBP algorithm shows the best performance. In case of medium and tight working points, the b-tag efficiency drops to $\approx 45-55\%$ and the CSV algorithm performs best. B-tagging algorithms used for analyses of data obtained at $\sqrt{s} = 8$\tev in 2012 where the TCHP, JP and CSV algorithms~\cite{CMS-PAS-BTV-13-001}. 
+%In order to compare the b-tagging performance in data and simulation, two different event samples are defined. On the one hand, an inclusive multijet sample is selected while on the other hand, a sample dominated by top-pair production is extracted. These samples allow to compare quantities relevant for b tagging in data and simulation, \eg the number of secondary vertices or b-tag discriminator values. In general, input variables for b tagging show a good agreement between data and simulation with deviations within 20\%. Typically, efficiencies and misidentification probabilities are measured as function of jet transverse momentum and pseudorapidity. Any disagreement between data and simulation in terms of efficiency can be expressed as \textit{scale factors} and corrected for in analyses such that b-tagging efficiency and misidentification probability in data and simulation match. 
 
 \section{Identification of Boosted t-Quark Jets }
 \label{sec:boosted_tops}
-Supersymmetric models or other scenarios describing physics beyond the Standard Model predict the extistence of new massive particles. Often, the coupling of these particles especially to quarks belonging to the third generation is sizeable like e.g. in decays of top squarks which predominantly are expected to decay into top quarks. Consequently, such processes lead to highly-energetic top-quarks in the final state which can be identified exploiting the specific properties of the top-quark. \\
+Supersymmetric models or other scenarios describing physics beyond the Standard Model predict the extistence of new massive particles. Often, the coupling of these particles especially to quarks belonging to the third generation is sizeable, \eg in decays of top squarks which predominantly are expected to decay into top quarks. Consequently, such processes lead to highly-energetic top-quarks in the final state which can be identified exploiting the specific properties of the top-quark. 
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{c}
@@ -152,34 +153,35 @@ Supersymmetric models or other scenarios describing physics beyond the Standard 
   \caption{Schematic diagrams of the decay of a top-quark in the resolved case (\textit{left}) and the boosted scenario (\textit{right}).}
   \label{fig:boosted_top}
 \end{figure}
-As discussed in Sec.~\ref{subsec:susy_collider}, the decay of the top-quark is experimentally characterized by the decay of the W boson and two thirds of top quark decays result exclusively in hadrons. This decay mode is here referred to as \textit{hadronic top}. If top quarks are produced with $\pt \ll m_t$, the top quark decay products show up as three distinct objects in the detector. In the case of hadronic tops, these are three well separated jets. However, if the top transverse momentum is high, the decay products are \textit{boosted} and thus collimated in the forward direction. Consequently, they might overlap and merge into a single large jet (\textit{fat jet}). The opening angle of the decay products $\Delta R$ is expected to scale as
+\\
+As discussed in Sec.~\ref{subsec:susy_collider}, the decay of the top-quark is experimentally characterized by the decay of the W boson which makes two thirds of top quark decays resulting exclusively in hadrons. This decay mode is here referred to as \textit{hadronic top}. If top quarks are produced with $\pt \ll m_t$, the top quark decay products show up as three distinct objects in the detector. In the case of hadronic tops, these are three well separated jets. However, if the top transverse momentum is high, the decay products are \textit{boosted} and thus collimated in the forward direction. Consequently, they might overlap and merge into a single large jet (\textit{fat jet}). The opening angle of the decay products $\Delta R$ is expected to scale as
 \begin{equation}
  \Delta R \approx 2\,m /\pt
  \label{eq:rule-of-thumb}
 \end{equation}  
-where $m$ and \pt are the mass and the transverse momentum of the decaying particle, respectively. Schematic diagrams of resolved and boosted top quark decays are illustrated in Fig.~\ref{fig:boosted_top}. The identification of boosted top-quark decays -- here restricted to hadronic tops -- is typically known as \textit{top tagging} and aims at the determination of the decay
+where $m$ and \pt are the mass and the transverse momentum of the decaying particle, respectively. Schematic diagrams of resolved and boosted top quark decays are illustrated in Fig.~\ref{fig:boosted_top}. \\
+The identification of boosted top-quark decays -- here restricted to hadronic tops -- is typically known as \textit{top tagging} and aims at the determination of the decay
 \begin{equation}
  t \rightarrow W + b \rightarrow qq' + b 
 \end{equation} 
-by analysing the substructure of fat jets and applying kinematic selections. Typically, such fatjets are more prone to radiation in the event that is wrongly associated to the hard jet than jets with smaller radii. Such unwanted contributions often result in a degraded resolution. In order to mitigate such effects \textit{jet grooming} techniques can be employed:
+by analysing the substructure of fat jets and applying kinematic selections. Typically, fat jets are clustered by the Cambrigde-Aachen algorithm with distance parameters of $\mathrm{R} = 0.8$ (CA8 jet) or $R = 1.5$ (CA15 jets). Such large jets are often more prone to radiation in the event that is wrongly associated to the hard jet than jets with smaller radii. Such unwanted contributions often result in a degraded resolution. In order to mitigate such effects, \textit{jet grooming} techniques can be employed:
 \begin{description}
- \item \textbf{Filtering~\cite{Butterworth:2008tr}:} Jet constituents are recombined by rerunning the Cambridge-Aachen algorithm with a smaller distance parameter, like 0.3. With this procedure hard subjets are identified. The filtering is performed by keeping only $n$ of the identified subjets. Thus, the dominant contribution from the hard process is captured while contamination from the underlying event is removed.
- \item \textbf{Pruning~\cite{Ellis:2009su}:} In contrast to filtering, pruning is not aiming at finding a particular number of subjets. Rather the idea is to systematically remove soft and large angle recombinations in the jet clustering process. Thus, the jet clustering is rerun using the initial jet constituents. \\
-For the recombination of objects $i, j$, two conditions are defined:
+ \item \textbf{Filtering~\cite{Butterworth:2008tr}:} Jet constituents are recombined by rerunning the Cambridge-Aachen algorithm with a smaller distance parameter, like 0.3. With this procedure, subjets within the fat jet are identified: The filtering is performed by keeping only $n$ of the identified subjets. Thus, the dominant contribution from the hard process is captured while contamination from the underlying event or pileup is removed.
+ \item \textbf{Pruning~\cite{Ellis:2009su}:} In contrast to filtering, pruning does not attempt to find a particular number of subjets. Rather, the idea is to systematically remove soft and large angle recombinations in the jet clustering process. For the recombination of objects $i$ and $j$, two conditions are defined:
 \begin{equation*}
 z = \frac{\mathrm{min}(p_{\mathrm{T},i}, p_{\mathrm{T},j})}{|\vec{p}_{\mathrm{T},i} + \vec{p}_{\mathrm{T},j}|} < z_\mathrm{cut}
 \end{equation*}
 \begin{equation*}
 \Delta R_{i,j} > D_\mathrm{cut} = \frac{m_{J}}{p_{\mathrm{T}, J}}
 \end{equation*}
-where $m_{J}$ and $p_{T, J}$ are the mass and the transverse momentum of the original fatjet, respectively. Whenever these two conditions are satistified, the recombination of objects $i$ and $j$ is not performed. For the Cambridge-Aachen algorithm $z_{cut}$ is typically chosen to be 0.1.
- \item \textbf{Trimming~\cite{Krohn:2009th}:} Similarly to the filtering procedure, the jet trimming is based on the concept of identifying subjets within an initially clustered large jet, here called \textit{seed jet}. The constituents of this seed jet are reclustered again using a jet clustering algorithm with a smaller distance parameter than for the seed jet. If 
+where $m_{J}$ and $p_{T, J}$ are the mass and the transverse momentum of the original fat jet, respectively. Whenever these two conditions are satistified, the recombination of objects $i$ and $j$ is not performed. Thus, the jet clustering is rerun using the initial jet constituents, but in addition employing a veto rule. For the Cambridge-Aachen algorithm $z_{cut}$ is typically chosen to be 0.1.
+ \item \textbf{Trimming~\cite{Krohn:2009th}:} Similarly to the filtering procedure, the jet trimming is based on the concept of identifying subjets within an initially clustered large jet, here called \textit{seed jet}. The constituents of this seed jet are reclustered using a jet clustering algorithm with a smaller distance parameter than for the seed jet. If 
 \begin{equation*}
 p_{\mathrm{T},i} < f_{\mathrm{cut}} \cdot \Lambda_{\mathrm{hard}} \; ,
 \end{equation*}
 the contributions from subjet $i$ to the seed jet are removed. Here, $f_{\mathrm{cut}}$ is a fixed dimensionless parameter and $\Lambda_{\mathrm{hard}}$ a scale chosen with respect to the specific kinematics of the event. While $f_{\mathrm{cut}}$ quantifies the expected hierarchy between FSR and ISR or pileup, the hard scale $\Lambda_{\mathrm{hard}}$ usually represents the transverse momentum of the seed jet or the effective mass of the event.% which is the scalar sum of the transverse momenta.
 \end{description} 
-In order to identify decays of boosted hadronic top quarks, as discussed above, several top tagging algorithms (or short \textit{taggers}) are commissioned within the CMS experiment~\cite{CMS:2014fya, CMS-DP-2014-036}. Two of them are described in some detail in the following:
+In order to identify decays of boosted hadronic top quarks, as discussed above, several top tagging algorithms (or short \textit{taggers}) are commissioned within the CMS experiment~\cite{CMS:2014fya, CMS-DP-2014-036}. Two of them that are used within this thesis are:
 \begin{description}
 \begin{figure}[!tp]
   \centering 
@@ -190,14 +192,14 @@ In order to identify decays of boosted hadronic top quarks, as discussed above, 
   \caption{Jet mass (\textit{left}) and minimum pairwise subjet mass (\textit{right}) for CA8 jets with $\pt > 500$\gev from a simulated $t\bar{t}$ POWHEG sample (red) and from a simulated QCD PYTHIA sample (black). Taken from~\cite{CMS:2014fya}.}
   \label{fig:boosted_top_cms_variables}
 \end{figure}
- \item \textbf{CMS Top Tagger:} The CMS Top Tagger~\cite{CMS-PAS-JME-09-001} is based on the Top Tagger developed by Kaplan et al.~\cite{Kaplan:2008ie} and acts on jets clustered by the Cambrigde-Aachen algorithm with distance parameter $\mathrm{R} = 0.8$ (CA8 jet). These jets used as input for the algorithm are denoted as \textit{hard jets}. Since the decay products of the hadronic top are not expected to be all collimated in one jet with $\mathrm{R} = 0.8$ for low transverse momenta, only jets with $\pt^{jet} > 350$\gev are considered. In order to identify subjets within the hard jets, a two stage decomposition procedure is applied. First, the algorithm aims at splitting the hard jet into two subclusters (\textit{primary decomposition}) and second, it is attempted to further split the clusters emerging from the first step (\textit{secondary decomposition}). Hence, the pairwise clustering sequence used to form the hard jet is performed in reverse order to identify subclusters. Typically, subjets are found when they are spatially well separated and carry a significant fraction of the momentum of the hard jet. Details on the actual splitting criteria can be found in~\cite{CMS:2014fya}. With this approach up to four individual subjets are identified within the hard jet. After a successful decomposition procedure kinematic criteria can be applied to the identified subjets in order to tag top jets. In the CMS top-tagging algorithm -- as employed in this thesis -- the following selections are used:
+ \item \textbf{CMS Top Tagger:} The CMS Top Tagger~\cite{CMS-PAS-JME-09-001} is based on the Top Tagger developed by Kaplan et al.~\cite{Kaplan:2008ie} and acts on jets clustered by the Cambrigde-Aachen algorithm with distance parameter $R = 0.8$. These jets, used as input for the algorithm, are denoted as \textit{hard jets}. Since the decay products of the hadronic top are not expected to be all contained within one jet with $R = 0.8$ for low transverse momenta of the top quark, only jets with $\pt^\mathrm{jet} > 350$\gev are considered. In order to identify subjets within the hard jets, a two-stage decomposition procedure is applied which performs the pairwise clustering sequence used to form the hard jet in reverse order. First, the algorithm aims at splitting the hard jet into two subclusters (\textit{primary decomposition}). Second, it is attempted to further split the clusters emerging from the first step (\textit{secondary decomposition}). Typically, subjets are found when they are spatially well separated and carry a significant fraction of the momentum of the hard jet. Details on the actual splitting criteria can be found in~\cite{CMS:2014fya}. With this approach, up to four subjets are identified within the hard jet. After a successful decomposition procedure, kinematic criteria can be applied to the identified subjets in order to tag top jets. In the CMS top-tagging algorithm, as employed in this thesis, the following criteria are used:
 \begin{description}
  \item -- Number of subjets $\ge$ 3
- \item -- The jet mass $m_{\mathrm{jet}}$, i.e. the mass of the four-vector sum of the constituents of the hard jet, has to be close to the top-mass: $m_{\mathrm{jet}} = 140-250$\gev.
- \item -- The invariant mass of each pair of the three subjets highest in \pt is calculated. The minimum of the pairwise masses $m_{\mathrm{min}}$ has to be close to the W mass: $m_{\mathrm{min}} > 50$\gev.
+ \item -- The jet mass $m_{\mathrm{jet}}$, \ie the mass of the four-vector sum of the constituents of the hard jet, has to be close to the top-mass with $140 < m_{\mathrm{jet}} < 250$\gev.
+ \item -- The invariant mass of each pair of the three subjets highest in \pt is calculated. The minimum of the pairwise masses $m_{\mathrm{min}}$ has to be $ > 50$\gev.
 \end{description}
 In Fig.~\ref{fig:boosted_top_cms_variables}, the distributions for jet mass and minimum pairwise mass are illustrated for a simulated $t\bar{t}$ (red) and QCD multijet (black) sample at $\sqrt{s} = 8$\tev. 
- \item \textbf{HEP Top Tagger:} The HEP Top Tagger~\cite{Plehn:2010st} uses jets with an even larger distance parameter than the CMS Top Tagger of $R = 1.5$ (CA15 jets). This makes the HEP top-tagging algorithm especially suitable for tops with moderate boost. Fat jets with a transverse momentum greater than 200\gev are used as input for the algorithm. Since a larger jet size is in principle more prone to disturbing effects from the underlying event or pile-up, a sophisticated decomposition procedure is applied to distinguish hard subjets from soft components. Similar to the decomposition done for the CMS tagger, the identification of subjets is based on going through the cluster history of a jet in reversed order. First, the jet is decomposed into subclusters applying a \textit{mass drop condition} discarding too soft components. Afterwards, all combinations of three clusters resulting from the mass drop decomposition are reclustered into subjets. For each combination the subjets are filterd by keeping only the five subjets highest in \pt. Finally, the combination with the mass determined from the filtered subjets closest to the top mass is kept and reclustered to force three subjets. Details on the mass drop decomposition and reclustering criteria can be found in~\cite{CMS:2014fya}. Kinematic selections are applied to these three final subjets in order to identify the top jets. The following quantities are used based on the invariant mass of combinations of subjets:
+ \item \textbf{HEP Top Tagger:} The HEP Top Tagger~\cite{Plehn:2010st} uses jets with a larger distance parameter than the CMS Top Tagger of $R = 1.5$. This makes the HEP top-tagging algorithm especially suited for tops with moderate boost and thus, uses fat jets with a transverse momentum greater than 200\gev as input. Since a larger jet size is in principle more prone to disturbing effects from the underlying event or pile-up, a sophisticated decomposition procedure is applied to distinguish hard subjets from soft components. Similar to the decomposition done for the CMS tagger, the identification of subjets is based on going through the cluster history of the jet in reversed order. First, the jet is decomposed into subclusters applying a \textit{mass drop condition} discarding too soft components. Afterwards, subclusters resulting from the mass drop decomposition are reclustered into subjets and filtering criteria are applied. Details on the mass drop decomposition and reclustering criteria can be found in~\cite{CMS:2014fya}. Finally, the combination with the mass determined from the filtered subjets closest to the top mass is kept and reclustered to force three subjets. Kinematic selections are applied to these three final subjets in order to identify the top jets. The following quantities are used based on the invariant mass of combinations of subjets:
 \begin{figure}[!tp]
   \centering 
   \begin{tabular}{cc}
@@ -208,27 +210,36 @@ In Fig.~\ref{fig:boosted_top_cms_variables}, the distributions for jet mass and 
   \label{fig:boosted_top_hep_variables}
 \end{figure}
 \begin{description}
- \item -- The invariant mass of the sum of the four-vectors of the three subjets is required to be in the top mass window: $m_{\mathrm{123}} = 140 - 250$\gev.
- \item -- In order to select the W mass the jet has to satisfy at least one of the following conditions based on the subjet pairwise masses
-\begin{description}
- \item \begin{equation}
-0.2 < \mathrm{atan} \frac{m_{\mathrm{13}}}{m_{\mathrm{12}}} < 1.3 \; \; \mathrm{and} \; \; R_{\mathrm{min}} < \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} < R_{\mathrm{max}}
+ \item -- The invariant mass of the sum of the four-vectors of the three subjets is required to be in the top mass window: $140 < m_{\mathrm{123}} < 250$\gev
+ \item -- In order to select the W mass, the jet has to satisfy at least one of the following conditions based on the subjet pairwise masses
+ \begin{equation}
+0.2 < \mathrm{atan} \frac{m_{\mathrm{13}}}{m_{\mathrm{12}}} < 1.3 \; \; \mathrm{and} \; \; R_{\mathrm{min}} < \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} < R_{\mathrm{max}} 
 \label{eq:hep_1}
-\end{equation}
- \item \begin{equation}
-R^2_{\mathrm{min}}(1+(\frac{m_{\mathrm{13}}}{m_{\mathrm{12}}})^2) < 1 - (\frac{m_{\mathrm{23}}}{m_{\mathrm{123}}})^2) < R^2_{\mathrm{max}}(1+(\frac{m_{\mathrm{13}}}{m_{\mathrm{12}}})^2) \; \; \mathrm{and} \; \; \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} > 0.35
+ \end{equation}
+%\end{equation}
+ \begin{equation}
+ R^2_{\mathrm{min}} \left( 1+ \left(\frac{m_{\mathrm{13}}}{m_{\mathrm{12}}}\right)^2 \right)  < 1 - \left( \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} \right)^2  < R^2_{\mathrm{max}} \left( 1+\left(\frac{m_{\mathrm{13}}}{m_{\mathrm{12}}} \right)^2 \right) \; \; \mathrm{and} \; \; \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} > 0.35 
 \label{eq:hep_2}
 \end{equation}
- \item \begin{equation}
-R^2_{\mathrm{min}}(1+(\frac{m_{\mathrm{12}}}{m_{\mathrm{13}}})^2) < 1 - (\frac{m_{\mathrm{23}}}{m_{\mathrm{123}}})^2) < R^2_{\mathrm{max}}(1+(\frac{m_{\mathrm{12}}}{m_{\mathrm{13}}})^2) \; \; \mathrm{and} \; \; \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} > 0.35
+\begin{equation}
+ R^2_{\mathrm{min}} \left( 1+ \left(\frac{m_{\mathrm{12}}}{m_{\mathrm{13}}} \right)^2 \right)  < 1 - \left(\frac{m_{\mathrm{23}}}{m_{\mathrm{123}}}\right)^2 < R^2_{\mathrm{max}}\left(1+ \left(\frac{m_{\mathrm{12}}}{m_{\mathrm{13}}} \right)^2 \right) \; \; \mathrm{and} \; \; \frac{m_{\mathrm{23}}}{m_{\mathrm{123}}} > 0.35 
 \label{eq:hep_3}
 \end{equation}
-\end{description}
 where the indices of $m$ indicate the rank of the considered subjets with respect to the transverse momentum, $R_{\mathrm{min}} = (1 - f_{W}) \times m_W/m_t$ and $R_{\mathrm{max}} = (1 + f_{W}) \times m_W/m_t$ for the W mass width chosen to be $f_W = 0.495$.  
 \end{description}
 The criteria related to the selection of the W mass are illustrated in Fig.~\ref{fig:boosted_top_hep_variables} for signal events as well as background events and indicated by the black solid lines resulting in an A-shaped region.
 \end{description}
-In analogy to the b-tagging algorithms, different working points for each top tagger can be defined characterized by a specific top-tag efficiency and misidentification rate. Typically, the working points are chosen such that they have a minimum mistag rate for a given signal efficiency. Commonly, the top-tag efficiency for simulated events is defined as the number of jets passing the top-tagging selection divided by the number of jets spatially matched to a simulated hadronic top or anti-top passing a certain \pt selection. Similarly, the mistag rate is defined as the number of jets passing the top-tagging selection divided by the number of jets spatially matched to a simulated quark or gluon from the hard process passing the \pt selection. The top-tag efficiency determined from simulated $t\bar{t}$ POWHEG events for the selection criteria described above amounts to 35.3\% for a matched parton-\pt of $> 200$\gev for the HEP Top Tagger and 38.3\% for a matched parton-\pt of $> 400$\gev for the CMS Top Tagger while the mistag rates as determined from simulated PYTHIA QCD multijet events are 2.6\% and 2.5\%, respectively. However, these efficiencies and mistag rates show a moderate dependence on pile-up such that in high pile-up environments a performance degradation is expected. For instance, in the case of the CMS Top Tagger the efficiency decreases as function of the number of primary vertices with a slope of $0.031\% \pm 0.034\%$ while the mistag rate increases with a slope of $0.095\% \pm 0.006\%$.      
+In analogy to the b-tagging algorithms, different working points for each top tagger can be defined characterized by a specific top-tag efficiency and misidentification rate. Typically, the working points are chosen such that they have a minimum mistag rate for a given signal efficiency. In addition, to the taggers as described above further selection criteria can be added to achieve a potential performance improvement. These criteria are subjet b-tagging, as introduced in~\cite{CMS-PAS-BTV-13-001}, and selections on the \textit{n-subjettiness}~\cite{Thaler:2010tr, Thaler:2011gf} ratio $\tau_3/\tau_2$ that denotes how likely a fat jet is composed of three subjets rather than two. \\
+The performance of various taggers is compared by determining the top-tag efficiency versus the misidentification rate. Commonly, the top-tag efficiency for simulated events is defined as the number of jets passing the top-tagging selection divided by the number of jets associated to a simulated hadronic top or anti-top passing a certain \pt selection. Similarly, the mistag rate is defined as the number of jets passing the top-tagging selection divided by the number of jets associated to a simulated quark or gluon from the hard process passing the \pt selection. In Fig.~\ref{fig:boosted_top_roc} the mistag rate versus the top-tagging efficiency is illustrated for various taggers and parton momenta.
+\begin{figure}[!t] 
+  \centering 
+  \begin{tabular}{c}
+    \includegraphics[width=0.9\textwidth]{figures/TopTag_ROC_Curves.pdf}  
+  \end{tabular}
+  \caption{Mistag rate versus top-tagging efficiency as measured from QCD \pythia6 and POWHEG \ttbar simulated events, respectively. In the cases where a jet mass cut is applied, the cut is not varied but fixed at $140 < m_\mathrm{jet} < 250$\gev. N-subjettiness is calculated using $R = 0.8$ jets except when used in combination with the HEP Top Tagger in which case $R = 1.5$ jets are used. Signal jets are matched to simulated all-hadronic generated top quarks, while background jets are matched to simulated partons from the hard scatter. Distributions are shown for three \pt selections, where the \pt cut is applied to the matched generated parton~\cite{CMS:2014fya}.}
+  \label{fig:boosted_top_roc}
+\end{figure}
+The top-tag efficiency determined from simulated $t\bar{t}$ events for the selection criteria described above amounts to 35.3\% for a matched parton-\pt of $> 200$\gev for the HEP Top Tagger (HEP WP0) and 38.3\% for a matched parton-\pt of $> 400$\gev for the CMS Top Tagger (CMS WP0) while the mistag rates as determined from simulated QCD multijet events are 2.6\% and 2.5\%, respectively. However, the tagging performance shows a moderate dependence on pile-up such that in high pile-up environments a performance degradation is expected. For instance, in the case of the CMS Top Tagger the efficiency stays rather stable as a function of the number of primary vertices with a slope of $0.031\% \pm 0.034\%$. However, the mistag rate increases with a slope of $0.095\% \pm 0.006\%$ as a function of the number of primary vertices.      
 
 %\subsection{Subjet B-Tagging}
 %\label{sec:boosted_tops_subjet_b}
