--- a/Resolution.tex
+++ b/Resolution.tex
@@ -129,7 +129,8 @@ In order to account for the dependence of the resolution on the transverse momen
  0.0, 0.5, 1.1, 1.7, 2.3, 2.8, 3.2, 5.0 \\
 \midrule
 $\pt^{ave}$ [GeV] \\
-62, 107, 175, 205, 242, 270, 310, 335, 379, 410, 467, 600, 1000, 2000 \\
+62, 107, 175, 205, 242, 270, 310, \\
+335, 379, 410, 467, 600, 1000, 2000 \\
 \bottomrule
 \end{tabular}}
 \end{table} 
@@ -720,6 +721,7 @@ If a correspondence of the resolution in data and simulation per jet is needed (
 If however an adjustment of the full response function is needed, the distribution can be adjusted by convolution with a Gaussian. Taking a Gaussian function with appropiate width $\sigma_{c}$, the width of the response function after convolution corresponds to the resolution in data according to 
 \begin{equation}
 \sigma_{c} = \sqrt{c^2-1} \cdot \left( \frac{\sigma_{MC}}{\pt} \right)
+\label{eq:res_adjust}
 \end{equation}
 Consequently, this method can only be used, if $c > 1$. \\
 Further discussion about the adjustment of the resolution in simulation to data can be found in Section~\ref{subsec:RA2_QCD} where this is actually applied in the estimation of background contributions arising from QCD multijet events to a search for new physics in an all-jet final state.  
