--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2520,6 +2520,11 @@ primaryClass   = "hep-ph"
   year = {2013}
 }
 
+@misc{MSchrode,
+  note = "M.~Schroeder, private communication",
+  year = {2014}
+}
+
 @article{bib:AN2013-416,
  author = {Kristin Goebel and Johannes Haller and Jochen Ott and Hartmut Stadie},
  title = {Jet Transverse Momentum Resolution Measurement using Dijet Events at $\sqrt{s} = 8$\tev},
@@ -4287,6 +4292,38 @@ Uncertainties based on
       volume        = "CMS-DP-2014-036",
       year          = "2014",
 }
+
+@article{Thaler:2010tr,
+      author         = "Thaler, Jesse and Van Tilburg, Ken",
+      title          = "{Identifying Boosted Objects with N-subjettiness}",
+      journal        = "JHEP",
+      volume         = "1103",
+      pages          = "015",
+      doi            = "10.1007/JHEP03(2011)015",
+      year           = "2011",
+      eprint         = "1011.2268",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4191",
+      SLACcitation   = "%%CITATION = ARXIV:1011.2268;%%",
+}
+
+@article{Thaler:2011gf,
+      author         = "Thaler, Jesse and Van Tilburg, Ken",
+      title          = "{Maximizing Boosted Top Identification by Minimizing
+                        N-subjettiness}",
+      journal        = "JHEP",
+      volume         = "1202",
+      pages          = "093",
+      doi            = "10.1007/JHEP02(2012)093",
+      year           = "2012",
+      eprint         = "1108.2701",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4287",
+      SLACcitation   = "%%CITATION = ARXIV:1108.2701;%%",
+}
+
 
 @article{Butterworth:2008tr,
       author         = "Butterworth, Jonathan M. and Davison, Adam R. and Rubin,
